; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/extr_input.c_input_set_timestamp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/extr_input.c_input_set_timestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { i32* }

@INPUT_CLK_MONO = common dso_local global i64 0, align 8
@INPUT_CLK_REAL = common dso_local global i64 0, align 8
@TK_OFFS_BOOT = common dso_local global i32 0, align 4
@INPUT_CLK_BOOT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @input_set_timestamp(%struct.input_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.input_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.input_dev* %0, %struct.input_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.input_dev*, %struct.input_dev** %3, align 8
  %7 = getelementptr inbounds %struct.input_dev, %struct.input_dev* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = load i64, i64* @INPUT_CLK_MONO, align 8
  %10 = getelementptr inbounds i32, i32* %8, i64 %9
  store i32 %5, i32* %10, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @ktime_mono_to_real(i32 %11)
  %13 = load %struct.input_dev*, %struct.input_dev** %3, align 8
  %14 = getelementptr inbounds %struct.input_dev, %struct.input_dev* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load i64, i64* @INPUT_CLK_REAL, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  store i32 %12, i32* %17, align 4
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* @TK_OFFS_BOOT, align 4
  %20 = call i32 @ktime_mono_to_any(i32 %18, i32 %19)
  %21 = load %struct.input_dev*, %struct.input_dev** %3, align 8
  %22 = getelementptr inbounds %struct.input_dev, %struct.input_dev* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = load i64, i64* @INPUT_CLK_BOOT, align 8
  %25 = getelementptr inbounds i32, i32* %23, i64 %24
  store i32 %20, i32* %25, align 4
  ret void
}

declare dso_local i32 @ktime_mono_to_real(i32) #1

declare dso_local i32 @ktime_mono_to_any(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
